Arreglo urls rotas

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</li></li>
                 <li><a href="./sucursales.html">Sucursales</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></a></li>
+                <li><a href="./contacto.html">Contacto</a></a></li>
             </ul>
         </nav>
     </header>
