--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</li></li>
-                <li><a href="./pages/sucursales.html">Sucursales</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></a></li>
+                <li><a href="./nosotros.html">Nosotros</li></li>
+                <li><a href="./sucursales.html">Sucursales</a></li>
+                <li><a href="./contacto.html">Contacto</a></a></li>
             </ul>
         </nav>
     </header>  
